Updated design document to latest link.

--- a/hand-collision.html
+++ b/hand-collision.html
@@ -95,7 +95,7 @@
                             <div class="item">Player should not be able to interact with items on opposite side of immovable object;</div>
                             <div class="item">Players still need to be able to interact with items (when not blocked by immovable objects).</div>
                         </div>
-                        <a class="ui big blue label" href="https://www.dropbox.com/s/a3o974c32me0a2n/Hand%20anti-cheating%20collision%20system.docx?dl=0" target="_blank">
+                        <a class="ui big blue label" href="https://www.dropbox.com/s/57dv52nm02wo5zw/Hand%20anti-cheating%20collision%20system.pdf?dl=0" target="_blank">
                             <i class="dropbox icon"></i>Design document
                         </a>
                     </div>
