Made all videos start muted. Updated homepage preview.

--- a/hand-collision.html
+++ b/hand-collision.html
@@ -66,7 +66,7 @@
         <div class="ui container basic segment content">
             <div class="ui vertical center aligned segment">
                 <h1 class="ui title header">HAND COLLISION</h1>
-                <video class="ui fluid image" autoplay loop>
+                <video class="ui fluid image" autoplay loop muted>
                     <source src="https://drive.google.com/uc?export=download&id=1Zi86nFRQV40HuGznsucMrZWoKYXnnnt0" type="video/mp4">
                     Your browser does not support the mp4 video tag.
                 </video>
@@ -199,7 +199,7 @@
                 </ol>
                 <p>The reason behind this order is because the distance of check 1 is <u data-tooltip="Shorter given the player stands still. Actions like teleporting will cause longer traces, but these don't happen often.">generally*</u> much shorter than that of 2, resulting in cheaper traces.</p>
                 <div class="ui unpadded segment">
-                    <video class="ui fluid image" autoplay loop>
+                    <video class="ui fluid image" autoplay loop muted>
                         <source src="https://drive.google.com/uc?export=download&id=1s6AcZBeH90SUkoZg8v71AqHUbw-kTDrq" type="video/mp4">
                         Your browser does not support the mp4 video tag.
                     </video>
@@ -227,7 +227,7 @@
                     <div class="eight wide column">
                         <div class="ui unpadded segment">
                             <div id="climb-bad">
-                                <video class="ui fluid image zoomable" autoplay loop>
+                                <video class="ui fluid image zoomable" autoplay loop muted>
                                     <source src="https://drive.google.com/uc?export=download&id=16Mpp6jCF2uAeGPBuqhub0QDyn4HI9Ch4" type="video/mp4">
                                     Your browser does not support the mp4 video tag.
                                 </video>
@@ -246,7 +246,7 @@
                     <div class="eight wide column">
                         <div class="ui unpadded segment">
                             <div id="climb-good">
-                                <video class="ui fluid image" autoplay loop>
+                                <video class="ui fluid image" autoplay loop muted>
                                     <source src="https://drive.google.com/uc?export=download&id=1KKfRVCZWbh-s2bcrTNtjwik8twEh5En2" type="video/mp4">
                                     Your browser does not support the mp4 video tag.
                                 </video>
@@ -277,7 +277,7 @@
                     <div class="seven wide column">
                         <div class="ui unpadded segment">
                             <div id="threshold">
-                                <video class="ui fluid image" autoplay loop>
+                                <video class="ui fluid image" autoplay loop muted>
                                     <source src="https://drive.google.com/uc?export=download&id=1KfDcS9ewDg3CVzEfLaII-GU-BWe39dRs" type="video/mp4">
                                     Your browser does not support the mp4 video tag.
                                 </video>
@@ -313,7 +313,7 @@
                     <div class="seven wide column">
                         <div class="ui unpadded segment">
                             <div id="ghost-hand">
-                                <video class="ui fluid image" autoplay loop>
+                                <video class="ui fluid image" autoplay loop muted>
                                     <source src="https://drive.google.com/uc?export=download&id=1Zi86nFRQV40HuGznsucMrZWoKYXnnnt0" type="video/mp4">
                                     Your browser does not support the mp4 video tag.
                                 </video>
@@ -340,7 +340,7 @@
             <div class="header"></div>
             <div class="content">
                 <div class="ui basic unpadded segment">
-                    <video class="ui fluid image" autoplay loop>
+                    <video class="ui fluid image" autoplay loop muted>
                         <source src="https://drive.google.com/uc?export=download&id=16Mpp6jCF2uAeGPBuqhub0QDyn4HI9Ch4" type="video/mp4">
                         Your browser does not support the mp4 video tag.
                     </video>
@@ -356,7 +356,7 @@
             <div class="header"></div>
             <div class="content">
                 <div class="ui basic unpadded segment">
-                    <video class="ui fluid image" autoplay loop>
+                    <video class="ui fluid image" autoplay loop muted>
                         <source src="https://drive.google.com/uc?export=download&id=1KKfRVCZWbh-s2bcrTNtjwik8twEh5En2" type="video/mp4">
                         Your browser does not support the mp4 video tag.
                     </video>
@@ -372,7 +372,7 @@
             <div class="header"></div>
             <div class="content">
                 <div class="ui basic unpadded segment">
-                    <video class="ui fluid image" autoplay loop>
+                    <video class="ui fluid image" autoplay loop muted>
                         <source src="https://drive.google.com/uc?export=download&id=1KfDcS9ewDg3CVzEfLaII-GU-BWe39dRs" type="video/mp4">
                         Your browser does not support the mp4 video tag.
                     </video>
@@ -388,7 +388,7 @@
             <div class="header"></div>
             <div class="content">
                 <div class="ui basic unpadded segment">
-                    <video class="ui fluid image" autoplay loop>
+                    <video class="ui fluid image" autoplay loop muted>
                         <source src="https://drive.google.com/uc?export=download&id=1Zi86nFRQV40HuGznsucMrZWoKYXnnnt0" type="video/mp4">
                         Your browser does not support the mp4 video tag.
                     </video>
