--- a/index.html
+++ b/index.html
@@ -67,12 +67,15 @@
                 <a class="ui card" href="hand-collision.html">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
-                            <img src="assets/images/test.jpg" class="ui fluid image">
+                            <img src="assets/images/hand-collision/preview.jpg" class="ui fluid image">
                         </div>
 
                         <div class="hidden content">
                             <div class="ui fluid image">
-                                <img src="assets/images/test.gif">
+                                <video class="ui fluid image" autoplay loop muted>
+                                    <source src="assets/images/hand-collision/preview.mp4" type="video/mp4">
+                                    <img src="assets/images/hand-collision/preview.jpg" class="ui fluid image">
+                                </video>
                                 <div class="image caption">
                                     <h3 class="ui inverted header">HAND COLLISION</h3>
                                     A system to make hands physical in the VR world. Could be used to prevent sequence-breaking through walls.
