--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                     <div class="menu">
                         
                         <a class="item" href="hand-collision.html">Hand collision</a>
+                        
+                        <a class="item" href="arduino-communication.html">Arduino communication</a>
 
                         <div class="item">
                             Product 2 <i class="dropdown icon"></i>
@@ -47,8 +49,6 @@
                                 <a class="item">Sub Product 2.2</a>
                             </div>
                         </div>
-
-                        <a class="item">Product 3</a>
 
                     </div>
                 </div>
@@ -85,23 +85,23 @@
                     </div>
                 </a>
 
-                <div class="ui card">
+                <a class="ui card" href="arduino-communication.html">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
-                            <img src="assets/images/test.jpg" class="ui fluid image">
+                            <img src="assets/images/arduino-communication/preview.jpg" class="ui fluid image">
                         </div>
 
                         <div class="hidden content">
                             <div class="ui fluid image">
-                                <img src="assets/images/test.gif">
+                                <img src="assets/images/arduino-communication/preview.gif">
                                 <div class="image caption">
-                                    <h3 class="ui inverted header">product name</h3>
-                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
+                                    <h3 class="ui inverted header">ARDUINO COMMUNICATION</h3>
+                                    The communication between an Arduino's connected hardware to the game to interact with the game.
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
 
                 <div class="ui card">
                     <div class="ui instant fade reveal">
