--- a/arduino-communication.html
+++ b/arduino-communication.html
@@ -42,7 +42,7 @@
 
                         <a class="item" href="hand-collision.html">Hand collision</a>
                         
-                        <div class="active item" href="arduino-communication.html">Arduino communication</div>
+                        <div class="active item">Arduino communication</div>
 
                         <div class="item">
                             Product 2 <i class="dropdown icon"></i>
