--- a/arduino-communication.html
+++ b/arduino-communication.html
@@ -44,6 +44,8 @@
                         
                         <div class="active item">Arduino communication</div>
 
+                        <a class="item" href="screenshot-tool.html">Screenshot tool</a>
+
                         <div class="item">
                             Product 2 <i class="dropdown icon"></i>
                             <div class="menu">
