--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                         
                         <a class="item" href="arduino-communication.html">Arduino communication</a>
 
+                        <a class="item" href="screenshot-tool.html">Screenshot tool</a>
+
                         <div class="item">
                             Product 2 <i class="dropdown icon"></i>
                             <div class="menu">
