--- a/index.html
+++ b/index.html
@@ -108,33 +108,18 @@
                 <div class="ui card">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
-                            <img src="assets/images/test.jpg" class="ui fluid image">
+                            <img src="assets/images/screenshot-tool/preview.jpg" class="ui fluid image">
                         </div>
 
                         <div class="hidden content">
                             <div class="ui fluid image">
-                                <img src="assets/images/test.gif">
+                                <video class="ui fluid image" autoplay loop muted>
+                                    <source src="assets/images/screenshot-tool/preview.mp4" type="video/mp4">
+                                    <img src="assets/images/screenshot-tool/preview.jpg" class="ui fluid image">
+                                </video>
                                 <div class="image caption">
-                                    <h3 class="ui inverted header">product name</h3>
-                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="ui card">
-                    <div class="ui instant fade reveal">
-                        <div class="visible content">
-                            <img src="assets/images/test.jpg" class="ui fluid image">
-                        </div>
-
-                        <div class="hidden content">
-                            <div class="ui fluid image">
-                                <img src="assets/images/test.gif">
-                                <div class="image caption">
-                                    <h3 class="ui inverted header">product name</h3>
-                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
+                                    <h3 class="ui inverted header">SCREENSHOT TOOL</h3>
+                                    A components that allow users to take screenshots from specific sources and preview what they would look like.
                                 </div>
                             </div>
                         </div>
