Added placeholder again since I needed extra filling.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,24 @@
                     </div>
                 </div>
 
+                <div class="ui card">
+                    <div class="ui instant fade reveal">
+                        <div class="visible content">
+                            <img src="assets/images/test.jpg" class="ui fluid image">
+                        </div>
+
+                        <div class="hidden content">
+                            <div class="ui fluid image">
+                                <img src="assets/images/test.gif">
+                                <div class="image caption">
+                                    <h3 class="ui inverted header">product name</h3>
+                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
