Fixed homepage link. Added screenshot flowchart.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </a>
 
-                <div class="ui card">
+                <a class="ui card" href="screenshot-tool.html">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
                             <img src="assets/images/screenshot-tool/preview.jpg" class="ui fluid image">
@@ -124,7 +124,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
 
                 <div class="ui card">
                     <div class="ui instant fade reveal">
