--- a/screenshot-tool.html
+++ b/screenshot-tool.html
@@ -46,6 +46,8 @@
 
                         <div class="active item">Screenshot tool</div>
 
+                        <a class="item" href="license-spring.html">License Spring</a>
+
                         <div class="item">
                             Product 2 <i class="dropdown icon"></i>
                             <div class="menu">
