--- a/hand-collision.html
+++ b/hand-collision.html
@@ -46,6 +46,8 @@
 
                         <a class="item" href="screenshot-tool.html">Screenshot tool</a>
 
+                        <a class="item" href="license-spring.html">License Spring</a>
+
                         <div class="item">
                             Product 2 <i class="dropdown icon"></i>
                             <div class="menu">
