--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
                         <a class="item" href="screenshot-tool.html">Screenshot tool</a>
 
+                        <a class="item" href="license-spring.html">License Spring</a>
+
                         <div class="item">
                             Product 2 <i class="dropdown icon"></i>
                             <div class="menu">
@@ -64,7 +66,7 @@
 
 
         <div class="ui container basic segment">
-            <div class="ui three stackable cards">
+            <div class="ui three centered stackable cards">
 
                 <a class="ui card" href="hand-collision.html">
                     <div class="ui instant fade reveal">
@@ -126,23 +128,23 @@
                     </div>
                 </a>
 
-                <div class="ui card">
+                <a class="ui card" href="license-spring.html">
                     <div class="ui instant fade reveal">
                         <div class="visible content">
-                            <img src="assets/images/test.jpg" class="ui fluid image">
+                            <img src="assets/images/license-spring/logo.png" class="ui fluid image">
                         </div>
 
                         <div class="hidden content">
                             <div class="ui fluid image">
-                                <img src="assets/images/test.gif">
+                                <img src="assets/images/license-spring/preview.png" class="ui fluid image">
                                 <div class="image caption">
-                                    <h3 class="ui inverted header">product name</h3>
-                                    A short example description of a product which would preferable be around this size. The rest of this text will serve to fill up the space to reach the earlier indicated size properly.
+                                    <h3 class="ui inverted header">LICENSE SPRING</h3>
+                                    Creating a UE4 plugin that exposes a third-party license library and the issues encountered during development.
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
 
             </div>
         </div>
